# django-iam-dbauth

./: .gitignore  .pre-commit-config.yaml  CHANGES  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-release.yml  python-tests.yml  python-tox.yml
src/django_iam_dbauth/: utils.py
src/django_iam_dbauth/aws/: database_wrapper.py
src/django_iam_dbauth/aws/mysql/: base.py
src/django_iam_dbauth/aws/postgis/: base.py
src/django_iam_dbauth/aws/postgresql/: base.py
tests/: conftest.py  test_aws_mysql.py  test_aws_postgresql.py
