[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["django_iam_dbauth"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["django_iam_dbauth", "tests"]
