[project]
name = "django-iam-dbauth"
version = "0.2.0"
description = "Django database backends to use AWS Database IAM Authentication"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Lab Digital", email = "opensource@labdigital.nl" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=4.2",
    "boto3",
    "dnspython"
]

[project.urls]
Homepage = "https://github.com/LabD/django-iam-dbauth"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "coverage",
    "tox>=4.18.0",
    "tox-gh-actions>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_iam_dbauth"]

[tool.ruff]
src = ["src", "tests"]
fix = true
